<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:padding="8dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_profile_picture"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnPersonal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_personal_details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_summary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEducation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_education"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_experience"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCertifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_certifications"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btnReferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_references"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            />
    </GridLayout>

    <Button
        android:id="@+id/btnPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/btn_preview"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

</LinearLayout>
