<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp"
        android:gravity="center"
    >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_full_name"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <Button
            android:id="@+id/btnDiscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_discard"/>
    </LinearLayout>
</LinearLayout>