<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:scaleType="centerCrop"
                android:background="@color/white"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/btn_profile_picture"/>
            <!-- Full Name -->
            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:text="@string/tv_full_name"
                android:background="@color/white"
                android:layout_gravity="center"/>

            <!-- Contact Info -->
            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#555555"
                android:text="@string/tv_contact_info"
                android:layout_gravity="center"/>

            <!-- CV Sections -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp">

                <!-- Summary -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:text="Summary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#222222"/>

                        <TextView
                            android:id="@+id/tvSummary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="#000000"/>
                    </LinearLayout>

                <!-- Education -->


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:text="Education"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#222222"/>

                        <TextView
                            android:id="@+id/tvEducation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="#000000"/>
                    </LinearLayout>

                <!-- Experience -->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:text="Experience"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#222222"/>

                        <TextView
                            android:id="@+id/tvExperience"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="#000000"/>
                    </LinearLayout>

                <!-- Certifications -->


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:text="Certifications"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#222222"/>

                        <TextView
                            android:id="@+id/tvCertifications"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="#000000"/>
                    </LinearLayout>

                <!-- References -->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:text="References"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#222222"/>

                        <TextView
                            android:id="@+id/tvReferences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="#000000"/>
                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
